Updated line 5 in 0000-01-02-jpq3366.md

--- a/_posts/0000-01-02-jpq3366.md
+++ b/_posts/0000-01-02-jpq3366.md
@@ -2,6 +2,6 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+“I am enough of an artist to draw freely upon my imagination. Imagination is more important than knowledge. Knowledge is limited. Imagination encircles the world.”
 Use the left arrow to go back!
 
